# rag

./: .env.example  .env.prod.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  Install-dev.md  LESSONS.md  commit_result.txt  dev-deploy.sh  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  embedding_providers_pricing.yml  skills-lock.json  todos.txt
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest_output.txt
backend/migrations/: 000_schema_migrations.sql  001_init.sql  002_workspace_sources.sql  003_jobs.sql  004_oidc.sql  005_model_dimensions.sql  006_index_jobs_idx.sql  007_index_jobs_reindex_trigger.sql  008_ollama_mxbai_embed_large.sql  009_harpocrate_vaults.sql  010_workspace_apikey_encrypted.sql  011_rerank_configs.sql  012_chunking_configs.sql  013_index_jobs_chunking_change_trigger.sql  014_chunking_strategy_markdown.sql  015_workspaces_apikey_ref.sql  016_workspace_sources_name.sql  017_index_job_files.sql  018_push_job_payloads.sql  019_webhooks.sql  020_webhook_calls.sql  021_embedding_models_2026.sql  022_embedding_models_ollama_qwen.sql  023_embedding_models_mistral_jina.sql  024_provider_api_keys.sql  025_git_credentials.sql  026_azure_openai_models.sql  027_add_expires_at.sql  028_ssh_keys.sql  029_vault_owner.sql  030_workspace_llm_configs.sql  031_enrichment_triggers.sql  032_languages.sql  033_workspace_api_keys.sql  034_source_webhook_enabled.sql  035_embedding_models_gemini.sql  035_path_strategies.sql  036_embedding_models_dashscope.sql  037_add_service_to_model_dimensions.sql  038_embedding_models_azure_foundry.sql  (+14 more)
backend/schema/: schema_v1.sql
backend/scripts/: chunk_diff.py  fetch-harpocrate-sdk.sh
backend/src/rag/: config.py  logging_setup.py  main.py
backend/src/rag/api/: admin.py  admin_git_credentials.py  admin_harpocrate_vaults.py  admin_index_keys.py  admin_oidc.py  admin_provider_keys.py  admin_ssh_keys.py  admin_webhooks.py  auth.py  auth_methods.py  enrichments.py  errors.py  git_webhooks.py  health.py  mcp.py  mcp_standard.py  playground.py  setup.py  workspace.py  ws.py
backend/src/rag/auth/: admin_auth.py  bearer.py  oidc_dependency.py  owner.py  workspace_auth.py
backend/src/rag/db/: enrichment_lookup.py  helpers.py  index_keys.py  mcp_tools.py  migrations.py  path_strategies.py  pool.py  workspace_embeddings.py  workspace_schema.py  workspace_search.py  workspace_structured.py
backend/src/rag/indexer/: chunking.py  noop.py  protocol.py  real.py
backend/src/rag/maintenance/: backfill_enrichment_metadata.py
backend/src/rag/rerank/: protocol.py
backend/src/rag/schemas/: admin.py  enrichments.py  mcp.py  (+12 more)
backend/tests/: conftest.py  test_boot_no_default_vault.py
backend/tests/api/: _helpers.py  conftest.py  test_admin_circuit_breaker.py  test_admin_harpocrate_vaults.py  test_admin_harpocrate_vaults_m5d.py  test_admin_index_keys.py  test_admin_models.py  test_admin_oidc.py  test_admin_oidc_auth.py  test_admin_reindex_jobs.py  test_admin_sources.py  test_admin_wireup.py  test_admin_workspaces.py  test_admin_workspaces_apikey.py  test_admin_workspaces_chunking.py  test_admin_workspaces_rerank.py  test_auth.py  test_auth_errors.py  test_auth_flow.py  test_auth_local.py  test_chunking_change_error.py  test_health.py  test_main.py  test_mcp_e2e_ollama_smoke.py  test_mcp_errors.py  test_mcp_multi.py  test_mcp_single.py  test_me_local.py  test_push_e2e_ollama_smoke.py  test_setup.py  test_sync_e2e.py  test_sync_wireup.py  test_workspace_delete_auth.py  test_workspace_push_auth.py  test_workspace_push_dedup.py  test_workspace_push_errors.py
backend/tests/auth/: test_admin_dep.py  test_workspace_auth_harpocrate.py
backend/tests/integration/: _git_fixture.py  _workspace_seed.py  conftest.py  test_apply_engine_change.py  test_boot_workspace_migrations.py  test_circuit_breaker.py  test_circuit_breaker_service.py  test_client_provider.py  test_create_workspace_with_chunking.py  test_executor_delete_job.py  test_executor_delete_job_circuit_breaker.py  test_executor_push_job.py  test_executor_retry.py  test_git_ops_branch.py  test_git_ops_clone.py  test_git_ops_diff.py  test_git_ops_list.py  test_git_ops_pull.py  test_harpocrate_vaults_service_m5d.py  test_harpocrate_vaults_service_reads_create.py  test_harpocrate_vaults_service_test_connection.py  test_harpocrate_vaults_service_writes.py  test_helpers.py  test_indexer_noop.py  test_indexer_real.py  test_indexer_real_structured.py  test_indexer_real_with_chunking_config.py  test_lifespan_api_key_dek_required.py  test_mcp_rerank_fail_fast.py  test_mcp_with_rerank.py  test_migration_001.py  test_migration_002.py  test_migration_003.py  test_migration_004.py  test_migration_005.py  test_migration_006.py  test_migration_009_harpocrate_vaults.py  test_migration_010_workspace_apikey.py  test_migration_011_rerank_configs.py  test_migration_012_chunking_configs.py  (+46 more)
backend/tests/services/: test_apikey_cache.py  test_local_auth.py  test_workspace_create_harpocrate.py  test_workspace_rotate_apikey.py
backend/tests/smoke/: test_providers_smoke.py
backend/tests/unit/: test_adapter.py  test_admin_router_factory.py  test_admin_source_webhook.py  test_apikey.py  test_chunking.py  test_config.py  test_config_api_key_dek.py  test_config_session_secret.py  test_enrichments.py  test_errors.py  test_filter_glob.py  test_git_ops_branches.py  test_git_ops_parse.py  test_git_ops_ssh.py  test_git_webhooks_endpoint.py  test_llm_clients.py  test_llm_clients_azure_foundry.py  test_logging.py  test_mcp_dispatcher.py  test_owner_id.py  test_parse_strategy_file.py  test_platform_azure_openai.py  test_platform_bearer.py  test_platform_ollama.py  test_provider_azure_openai.py  test_provider_factory.py  test_provider_jina.py  test_provider_mistral.py  test_provider_ollama.py  test_provider_openai.py  test_provider_protocol.py  test_provider_voyage.py  test_repo_storage.py  test_resolver_cache.py  test_resolver_parse_env.py  test_resolver_provider_mode.py  test_resolver_vault.py  test_scheduler_webhook_filter.py  test_schemas_admin.py  test_schemas_sync.py  (+9 more)
(+529 files in other folders)
