[project]
name = "rag"
version = "0.1.0"
description = "ag-flow.rag — service d'infrastructure RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
    "bcrypt>=4.2",
    "python-multipart>=0.0.20",
    "harpocrate",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F/W : pycodestyle + pyflakes — erreurs et style standard
# I     : isort — ordre des imports
# B     : flake8-bugbear — bugs probables
# UP    : pyupgrade — syntaxe Python moderne
# N     : pep8-naming — conventions de nom
# ASYNC : flake8-async — anti-patterns asyncio
# S     : flake8-bandit — sécurité (critique : ce service manipule des secrets)
# RUF   : règles natives ruff
# SIM   : flake8-simplify — simplifications d'idiomes
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "RUF", "SIM"]
# Pas de ignore — la longueur de ligne est gérée par le formatter (line-length=100).

[tool.ruff.lint.per-file-ignores]
# B011 : assert False — OK en tests.
# S101 : assert dans le code applicatif — OK en tests.
# S105/S106 : hardcoded secrets — OK dans les fixtures de tests.
"tests/**/*.py" = ["B011", "S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
files = ["src/rag"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "smoke: end-to-end tests calling real external services (opt-in)",
]

[tool.uv.sources]
# Le wheel doit respecter PEP 427 (name-version-pythontag-abitag-platformtag.whl).
# Le script fetch-harpocrate-sdk.sh télécharge sous ce nom canonique factice ;
# la vraie version vit dans les métadonnées internes du wheel.
harpocrate = { path = "vendor/harpocrate-0.4.0-py3-none-any.whl" }
