[project]
name = "rag"
version = "0.1.0"
description = "ag-flow.rag — service d'infrastructure RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
    "bcrypt>=4.2",
    "python-multipart>=0.0.20",
    "harpocrate",
    "pgvector>=0.3",
    "markdown-it-py>=3.0,<4.0",
    "tree-sitter-language-pack>=0.9",
    "authlib>=1.3,<2.0",
    "itsdangerous>=2.2.0",
    "pyyaml>=6.0.3",
    "anthropic>=0.40",
    "openai>=1.50",
    "cryptography>=43.0",
    "mcp>=1.27.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F/W : pycodestyle + pyflakes — erreurs et style standard
# I     : isort — ordre des imports
# B     : flake8-bugbear — bugs probables
# UP    : pyupgrade — syntaxe Python moderne
# N     : pep8-naming — conventions de nom
# ASYNC : flake8-async — anti-patterns asyncio
# S     : flake8-bandit — sécurité (critique : ce service manipule des secrets)
# RUF   : règles natives ruff
# SIM   : flake8-simplify — simplifications d'idiomes
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "RUF", "SIM"]
# Pas de ignore — la longueur de ligne est gérée par le formatter (line-length=100).

[tool.ruff.lint.per-file-ignores]
# B011 : assert False — OK en tests.
# S101 : assert dans le code applicatif — OK en tests.
# S105/S106 : hardcoded secrets — OK dans les fixtures de tests.
# S603/S607 : subprocess avec PATH partiel — OK dans les fixtures git
# de tests (input contrôlé, pas d'untrusted input).
"tests/**/*.py" = ["B011", "S101", "S105", "S106", "S603", "S607"]
# N818 : les exceptions métier admin sont nommées par cas (WorkspaceNotFound,
# ModelInUse, ...) — contrat figé par la spec, suffixe `Error` non souhaité.
"src/rag/api/errors.py" = ["N818"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
files = ["src/rag"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Toutes les fixtures async (dont pg_container et session_pool) doivent
# vivre sur la même event loop que les tests pour partager les connexions
# asyncpg. Sans ça → "Future attached to a different loop" sur les fixtures
# scope=session.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "smoke: end-to-end tests calling real external services (opt-in)",
]
# Les tests `smoke` appellent des services externes réels (OpenAI, Voyage,
# Ollama). Ils sont exclus par défaut et activés explicitement via
# `uv run pytest -m smoke` (cf. README).
addopts = "-m 'not smoke'"

[tool.uv.sources]
# SDK Harpocrate v0.6.0 vendoré en source local éditable. Permet de patcher
# le SDK rapidement sans avoir à rebuild/republier le wheel.
# Le précédent wheel `vendor/harpocrate-0.4.0-py3-none-any.whl` a été retiré
# au profit du source.
harpocrate = { path = "vendor/harpocrate-sdk", editable = true }
